--- a/Exercícios/ex022/fundo006.html
+++ b/Exercícios/ex022/fundo006.html
@@ -7,14 +7,22 @@
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /* background-color: black;
             background-image: url('imagens/pattern003\ \(1\).png');
             background-position: center center;
+            background-attachment: fixed; */
+
+            /* Shorthand - background 
+            color > image > position > repeat > [size] 
+            > attachment
+            */
+
+            background: black url('fundo004.html') center center no-repeat cover fixed;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
